--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -14,11 +14,12 @@
     <nav>
       <div class="nav-wrapper">
         <ul>
-          <li><a href="/" class="left brand-logo">&nbsp;&nbsp;Workout Collector</a></li>
+          <li><a href="{%url 'home'%}" class="left brand-logo">&nbsp;&nbsp;Workout Collector</a></li>
         </ul>
         <ul class="right">
-          <li><a href="/about">About</a></li>
-          <li><a href="/workouts">view all workouts</a></li>
+          <li><a href="{%url 'about'%}">About</a></li>
+          <li><a href="{%url 'workouts_create'%}">Add a Workout</a></li>
+          <li><a href="{%url 'index'%}">view all workouts</a></li>
         </ul>
       </div>
     </nav>
