--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Workout Collector</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 </head>
 <body>
@@ -18,8 +19,10 @@
         </ul>
         <ul class="right">
           <li><a href="{%url 'about'%}">About</a></li>
+          <li><a href="{%url 'equipments_create'%}">Add an Equipment</a></li>
           <li><a href="{%url 'workouts_create'%}">Add a Workout</a></li>
           <li><a href="{%url 'index'%}">view all workouts</a></li>
+          <li><a href="{%url 'equipments_index'%}">view all Equipments</a></li>
         </ul>
       </div>
     </nav>
