--- a/main_app/templates/workouts/detail.html
+++ b/main_app/templates/workouts/detail.html
@@ -3,18 +3,113 @@
 
 <h1>Workout Details</h1>
 
-<div class="card">
-  <div class="card-content">
-    <span class="card-title">{{ workout.name }}</span>
+<div class="row">
+  <div class="col s6">
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">{{ workout.name }}</span>
+        <span class="card-title">{{ workout.name }}</span>
     <p>Target: {{ workout.target }}</p>
     <p>Description: {{ workout.description|linebreaks }}</p>
       <p>Reps: {{ workout.reps }}</p>
       <p>Sets: {{workout.sets}}</p>
-  </div>
-  <div class="card-action">
-    <a href="{% url 'workouts_update' workout.id %}">Edit</a>
+
+      </div>
+      <div class="card-action">
+        <a href="{% url 'workouts_update' workout.id %}">Edit</a>
     <a href="{% url 'workouts_delete' workout.id %}">Delete</a>
+      </div>
+    </div>
+  </div>
+  <!-- New Markup Below -->
+  <div class="col s6">
+    <form action="{% url 'add_workout' workout.id %}" method="POST">
+      {% csrf_token %}
+      <!-- Render the inputs -->
+      {{ scheduling_form.as_p }}
+      <input type="submit" class="btn" value="Add Feeding">
+    </form>
+    <br>
+    {% if workout.workout_for_today %}
+    <div class="card-panel teal-text center-align">{{workout.name}} workout completed for the day</div>
+  {% else %}
+    <div class="card-panel red-text center-align">{{workout.name}} workout can be done more time</div>
+  {% endif %}
+    <table class="striped">
+      <thead>
+        <tr><th>Date</th><th>Time</th></tr>
+      </thead>
+      <tbody>
+        {% for timing in workout.scheduling_set.all %}
+          <tr>
+            <td>{{timing.date}}</td>
+            <td>{{timing.get_workout_time_display}}</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
+  <!-- New Markup Above -->
+  
+</div>
+<hr>
+<div class="row">
+  <div class="col s6">
+    <h3>{{ workout.name }}'s Equipment</h3>
+    {% if workout.equipments.count %}
+      {% for equipment in workout.equipments.all %}
+        <div class="card">
+          <div class="card-content">
+             {{ equipment.name }}
+            </span>
+          </div>
+      <div class="card-action">
+        <form action="{%url 'unassoc_equipment' workout.id equipment.id%}" method="POST">
+          {% csrf_token %}
+          <button type="submit" class="btn">Remove</button>
+        </form>
+      </div>
+        </div>
+      {% endfor %}
+    {% else %}
+      <h5>No Equipment 😿</h5>
+    {% endif %}
+  </div>
+  <!-- Available toys will come after this line -->
+  <div class="col s6">
+    <h3>Available Equipments</h3>
+    {% if equipments.count %}
+      {% for equipment in equipments.all %}
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">
+              {{ equipment.name }}
+            </span>
+          </div>
+          <div class="card-action">
+            <form action="{%url 'assoc_equipment' workout.id equipment.id%}" method="POST">
+              {% csrf_token %}
+              <button type="submit" class="btn">Add</button>
+            </form>
+          </div>
+        </div>
+      {% endfor %}
+    {% else %}
+      <h5>{{workout.name}} Already Has All Equipments Available</h5>
+    {% endif %}
   </div>
 </div>
 
+<script>
+  const dateEl = document.getElementById('id_date');
+  // M is Materialize's global variable
+  M.Datepicker.init(dateEl, {
+    format: 'yyyy-mm-dd',
+    defaultDate: new Date(),
+    setDefaultDate: true,
+    autoClose: true
+  });
+  const selectEl = document.getElementById('id_workout_time');
+  M.FormSelect.init(selectEl);
+</script>
 {% endblock %}
